@@ -176,39 +176,7 @@
          duo_mode/1,
          source_subscriptions/2,
          context_options/1,
-         trans_id/1,
-         % deprecated, moved to the cloudi_environment module
-         environment_lookup/0,
-         environment_transform/1,
-         environment_transform/2,
-         % deprecated, moved to the cloudi_service_name module
-         service_name_new/2,
-         service_name_new/4,
-         service_name_parse/2,
-         service_name_parse_with_suffix/2,
-         % deprecated, moved to the cloudi_request module
-         request_http_qs_parse/1,
-         % deprecated, moved to the cloudi_request_info module
-         request_info_key_value_new/1,
-         request_info_key_value_parse/1,
-         % deprecated, moved to the cloudi_key_value module
-         key_value_erase/2,
-         key_value_find/2,
-         key_value_store/3]).
-
--deprecated([environment_lookup/0,
-             environment_transform/1,
-             environment_transform/2,
-             service_name_new/2,
-             service_name_new/4,
-             service_name_parse/2,
-             service_name_parse_with_suffix/2,
-             request_http_qs_parse/1,
-             request_info_key_value_new/1,
-             request_info_key_value_parse/1,
-             key_value_erase/2,
-             key_value_find/2,
-             key_value_store/3]).
+         trans_id/1]).
 
 -include("cloudi_core_i_constants.hrl").
 
@@ -2583,184 +2551,6 @@ context_options(Dispatcher) ->
 
 trans_id(Dispatcher) ->
     gen_server:call(Dispatcher, trans_id, infinity).
-
-%%-------------------------------------------------------------------------
-%% @doc
-%% @deprecated Use {@link cloudi_environment:lookup/0} instead
-%% @end
-%%-------------------------------------------------------------------------
-
--spec environment_lookup() ->
-    cloudi_x_trie:cloudi_x_trie().
-
-environment_lookup() ->
-    cloudi_environment:lookup().
-
-%%-------------------------------------------------------------------------
-%% @doc
-%% @deprecated Use {@link cloudi_environment:transform/1} instead
-%% @end
-%%-------------------------------------------------------------------------
-
--spec environment_transform(String :: string()) ->
-    string().
-
-environment_transform(String) ->
-    cloudi_environment:transform(String).
-
-%%-------------------------------------------------------------------------
-%% @doc
-%% @deprecated Use {@link cloudi_environment:transform/2} instead
-%% @end
-%%-------------------------------------------------------------------------
-
--spec environment_transform(String :: string(),
-                            Lookup :: cloudi_x_trie:cloudi_x_trie()) ->
-    string().
-
-environment_transform(String, Lookup) ->
-    cloudi_environment:transform(String, Lookup).
-
-%%-------------------------------------------------------------------------
-%% @doc
-%% @deprecated Use {@link cloudi_service_name:new/2} instead
-%% @end
-%%-------------------------------------------------------------------------
-
--spec service_name_new(Pattern :: string(),
-                       Parameters :: list(string())) ->
-    {ok, string()} |
-    {error, parameters_ignored | parameter_missing}.
-
-service_name_new(Pattern, Parameters) ->
-    cloudi_service_name:new(Pattern, Parameters).
-
-%%-------------------------------------------------------------------------
-%% @doc
-%% @deprecated Use {@link cloudi_service_name:new/4} instead
-%% @end
-%%-------------------------------------------------------------------------
-
--spec service_name_new(Pattern :: string(),
-                       Parameters :: list(string()),
-                       ParametersSelected :: list(pos_integer()),
-                       ParametersStrictMatching :: boolean()) ->
-    {ok, string()} |
-    {error,
-     parameters_ignored | parameter_missing | parameters_selected_empty |
-     {parameters_selected_ignored, list(pos_integer())} | 
-     {parameters_selected_missing, pos_integer()}}.
-
-service_name_new(Pattern, Parameters, ParametersSelected,
-                 ParametersStrictMatching) ->
-    cloudi_service_name:new(Pattern, Parameters, ParametersSelected,
-                            ParametersStrictMatching).
-
-%%-------------------------------------------------------------------------
-%% @doc
-%% @deprecated Use {@link cloudi_service_name:parse/2} instead
-%% @end
-%%-------------------------------------------------------------------------
-
--spec service_name_parse(Name :: string(),
-                         Pattern :: string()) ->
-    list(string()) | error.
-
-service_name_parse(Name, Pattern) ->
-    cloudi_service_name:parse(Name, Pattern).
-
-%%-------------------------------------------------------------------------
-%% @doc
-%% @deprecated Use {@link cloudi_service_name:parse_with_suffix/2} instead
-%% @end
-%%-------------------------------------------------------------------------
-
--spec service_name_parse_with_suffix(Name :: string(),
-                                     Pattern :: string()) ->
-    {list(string()), string()} | error.
-
-service_name_parse_with_suffix(Name, Pattern) ->
-    cloudi_service_name:parse_with_suffix(Name, Pattern).
-
-%%-------------------------------------------------------------------------
-%% @doc
-%% @deprecated Use {@link cloudi_request:http_qs_parse/1} instead
-%% @end
-%%-------------------------------------------------------------------------
-
--spec request_http_qs_parse(Request :: binary() |
-                                       cloudi_key_value:key_values()) ->
-    Result :: dict_proxy(cloudi_key_value:key(), cloudi_key_value:value()).
-
-request_http_qs_parse(Request) ->
-    cloudi_request:http_qs_parse(Request).
-
-%%-------------------------------------------------------------------------
-%% @doc
-%% @deprecated Use {@link cloudi_request_info:key_value_new/1} instead
-%% @end
-%%-------------------------------------------------------------------------
-
--spec request_info_key_value_new(RequestInfo ::
-                                     cloudi_key_value:key_values()) ->
-    Result :: binary().
-
-request_info_key_value_new(RequestInfo) ->
-    cloudi_request_info:key_value_new(RequestInfo).
-
-%%-------------------------------------------------------------------------
-%% @doc
-%% @deprecated Use {@link cloudi_request_info:key_value_parse/1} instead
-%% @end
-%%-------------------------------------------------------------------------
-
--spec request_info_key_value_parse(RequestInfo :: binary() |
-                                                  list({any(), any()})) ->
-    Result :: dict_proxy(any(), any()).
-
-request_info_key_value_parse(RequestInfo) ->
-    cloudi_request_info:key_value_parse(RequestInfo).
-
-%%-------------------------------------------------------------------------
-%% @doc
-%% @deprecated Use {@link cloudi_key_value:erase/2} instead
-%% @end
-%%-------------------------------------------------------------------------
-
--spec key_value_erase(Key :: any(),
-                      KeyValues :: cloudi_key_value:key_values()) ->
-    NewKeyValues :: cloudi_key_value:key_values().
-
-key_value_erase(Key, KeyValues) ->
-    cloudi_key_value:erase(Key, KeyValues).
-
-%%-------------------------------------------------------------------------
-%% @doc
-%% @deprecated Use {@link cloudi_key_value:find/2} instead
-%% @end
-%%-------------------------------------------------------------------------
-
--spec key_value_find(Key :: any(),
-                     KeyValues :: cloudi_key_value:key_values()) ->
-    {ok, Value :: any()} |
-    error.
-
-key_value_find(Key, KeyValues) ->
-    cloudi_key_value:find(Key, KeyValues).
-
-%%-------------------------------------------------------------------------
-%% @doc
-%% @deprecated Use {@link cloudi_key_value:store/3} instead
-%% @end
-%%-------------------------------------------------------------------------
-
--spec key_value_store(Key :: any(),
-                      Value :: any(),
-                      KeyValues :: cloudi_key_value:key_values()) ->
-    NewKeyValues :: cloudi_key_value:key_values().
-
-key_value_store(Key, Value, KeyValues) ->
-    cloudi_key_value:store(Key, Value, KeyValues).
 
 %%%------------------------------------------------------------------------
 %%% Private functions
